# lazysimd

./: Cargo.toml  README.md
lazysimd_macro/: Cargo.toml
lazysimd_macro/src/: lib.rs
src/: lib.rs  scan.rs
src/imp/: aarch64.rs  x86.rs
